--- a/examples/advanced_init/events_live.html
+++ b/examples/advanced_init/events_live.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" type="image/ico" href="http://www.datatables.net/favicon.ico">
@@ -9,38 +10,44 @@
 	<link rel="stylesheet" type="text/css" href="../resources/syntax/shCore.css">
 	<link rel="stylesheet" type="text/css" href="../resources/demo.css">
 	<style type="text/css" class="init">
-	
+
 	</style>
 	<script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script type="text/javascript" language="javascript" src="../../media/js/jquery.dataTables.js"></script>
 	<script type="text/javascript" language="javascript" src="../resources/syntax/shCore.js"></script>
 	<script type="text/javascript" language="javascript" src="../resources/demo.js"></script>
 	<script type="text/javascript" language="javascript" class="init">
-	
 
-$(document).ready(function() {
-	var table = $('#example').DataTable();
-	
-	$('#example tbody').on('click', 'tr', function () {
-		var data = table.row( this ).data();
-		alert( 'You clicked on '+data[0]+'\'s row' );
-	} );
-} );
+
+		$(document).ready(function () {
+			var table = $('#example').DataTable();
+
+			$('#example tbody').on('click', 'tr', function () {
+				var data = table.row(this).data();
+				alert('You clicked on ' + data[0] + '\'s row');
+			});
+		});
 
 
 	</script>
 </head>
+
 <body class="dt-example">
 	<div class="container">
 		<section>
 			<h1>DataTables example <span>DOM / jQuery events</span></h1>
 			<div class="info">
-				<p>Events assigned to the table can be exceptionally useful for user interaction, however you must be aware that DataTables will add and remove rows from the DOM
-				as they are needed (i.e. when paging only the visible elements are actually available in the DOM). As such, this can lead to the odd hiccup when working with
-				events.</p>
-				<p>One of the best ways of dealing with this is through the use of delegated events with jQuery's <code>on</code> method, as shown in this example. This example
-				also uses the DataTables <a href="//datatables.net/reference/api/row().data()"><code class="api" title="DataTables API method">row().data()</code></a> method to
-				retrieve information about the selected row - the row's data so we can show it in the <code>alert</code> message in this case.</p>
+				<p>Events assigned to the table can be exceptionally useful for user interaction, however you must be
+					aware that DataTables will add and remove rows from the DOM
+					as they are needed (i.e. when paging only the visible elements are actually available in the DOM).
+					As such, this can lead to the odd hiccup when working with
+					events.</p>
+				<p>One of the best ways of dealing with this is through the use of delegated events with jQuery's
+					<code>on</code> method, as shown in this example. This example
+					also uses the DataTables <a href="//datatables.net/reference/api/row().data()"><code class="api"
+							title="DataTables API method">row().data()</code></a> method to
+					retrieve information about the selected row - the row's data so we can show it in the
+					<code>alert</code> message in this case.</p>
 			</div>
 			<div class="demo-html"></div>
 			<table id="example" class="display" style="width:100%">
@@ -532,18 +539,23 @@ $(document).ready(function() {
 			</ul>
 			<div class="tabs">
 				<div class="js">
-					<p>The Javascript shown below is used to initialise the table shown in this example:</p><code class="multiline language-js">$(document).ready(function() {
-	var table = $('#example').DataTable();
-	
-	$('#example tbody').on('click', 'tr', function () {
-		var data = table.row( this ).data();
-		alert( 'You clicked on '+data[0]+'\'s row' );
-	} );
-} );</code>
-					<p>In addition to the above code, the following Javascript library files are loaded for use in this example:</p>
+					<p>The Javascript shown below is used to initialise the table shown in this example:</p>
+					<code>
+						class="multiline language-js">$(document).ready(function() {
+							var table = $('#example').DataTable();
+							
+							$('#example tbody').on('click', 'tr', function () {
+								var data = table.row( this ).data();
+								alert( 'You clicked on '+data[0]+'\'s row' );
+							} );
+						} );
+					</code>
+					<p>In addition to the above code, the following Javascript library files are loaded for use in this
+						example:</p>
 					<ul>
 						<li>
-							<a href="https://code.jquery.com/jquery-3.3.1.js">https://code.jquery.com/jquery-3.3.1.js</a>
+							<a
+								href="https://code.jquery.com/jquery-3.3.1.js">https://code.jquery.com/jquery-3.3.1.js</a>
 						</li>
 						<li>
 							<a href="../../media/js/jquery.dataTables.js">../../media/js/jquery.dataTables.js</a>
@@ -551,14 +563,17 @@ $(document).ready(function() {
 					</ul>
 				</div>
 				<div class="table">
-					<p>The HTML shown below is the raw HTML table element, before it has been enhanced by DataTables:</p>
+					<p>The HTML shown below is the raw HTML table element, before it has been enhanced by DataTables:
+					</p>
 				</div>
 				<div class="css">
 					<div>
-						<p>This example uses a little bit of additional CSS beyond what is loaded from the library files (below), in order to correctly display the table. The
-						additional CSS used is shown below:</p><code class="multiline language-css"></code>
+						<p>This example uses a little bit of additional CSS beyond what is loaded from the library files
+							(below), in order to correctly display the table. The
+							additional CSS used is shown below:</p><code class="multiline language-css"></code>
 					</div>
-					<p>The following CSS library files are loaded for use in this example to provide the styling of the table:</p>
+					<p>The following CSS library files are loaded for use in this example to provide the styling of the
+						table:</p>
 					<ul>
 						<li>
 							<a href="../../media/css/jquery.dataTables.css">../../media/css/jquery.dataTables.css</a>
@@ -566,13 +581,16 @@ $(document).ready(function() {
 					</ul>
 				</div>
 				<div class="ajax">
-					<p>This table loads data by Ajax. The latest data that has been loaded is shown below. This data will update automatically as any additional data is
-					loaded.</p>
+					<p>This table loads data by Ajax. The latest data that has been loaded is shown below. This data
+						will update automatically as any additional data is
+						loaded.</p>
 				</div>
 				<div class="php">
-					<p>The script used to perform the server-side processing for this table is shown below. Please note that this is just an example script using PHP. Server-side
-					processing scripts can be written in any language, using <a href="//datatables.net/manual/server-side">the protocol described in the DataTables
-					documentation</a>.</p>
+					<p>The script used to perform the server-side processing for this table is shown below. Please note
+						that this is just an example script using PHP. Server-side
+						processing scripts can be written in any language, using <a
+							href="//datatables.net/manual/server-side">the protocol described in the DataTables
+							documentation</a>.</p>
 				</div>
 			</div>
 		</section>
@@ -769,7 +787,8 @@ $(document).ready(function() {
 								<a href="../api/multi_filter.html">Individual column searching (text inputs)</a>
 							</li>
 							<li>
-								<a href="../api/multi_filter_select.html">Individual column searching (select inputs)</a>
+								<a href="../api/multi_filter_select.html">Individual column searching (select
+									inputs)</a>
 							</li>
 							<li>
 								<a href="../api/highlight.html">Highlighting rows and columns</a>
@@ -866,7 +885,8 @@ $(document).ready(function() {
 								<a href="../server_side/defer_loading.html">Deferred loading of data</a>
 							</li>
 							<li>
-								<a href="../server_side/pipeline.html">Pipelining data to reduce Ajax calls for paging</a>
+								<a href="../server_side/pipeline.html">Pipelining data to reduce Ajax calls for
+									paging</a>
 							</li>
 						</ul>
 					</div>
@@ -892,14 +912,19 @@ $(document).ready(function() {
 					</div>
 				</div>
 				<div class="epilogue">
-					<p>Please refer to the <a href="http://www.datatables.net">DataTables documentation</a> for full information about its API properties and methods.<br>
-					Additionally, there are a wide range of <a href="http://www.datatables.net/extensions">extensions</a> and <a href=
-					"http://www.datatables.net/plug-ins">plug-ins</a> which extend the capabilities of DataTables.</p>
-					<p class="copyright">DataTables designed and created by <a href="http://www.sprymedia.co.uk">SpryMedia Ltd</a> © 2007-2018<br>
-					DataTables is licensed under the <a href="http://www.datatables.net/mit">MIT license</a>.</p>
+					<p>Please refer to the <a href="http://www.datatables.net">DataTables documentation</a> for full
+						information about its API properties and methods.<br>
+						Additionally, there are a wide range of <a
+							href="http://www.datatables.net/extensions">extensions</a> and <a
+							href="http://www.datatables.net/plug-ins">plug-ins</a> which extend the capabilities of
+						DataTables.</p>
+					<p class="copyright">DataTables designed and created by <a
+							href="http://www.sprymedia.co.uk">SpryMedia Ltd</a> © 2007-2018<br>
+						DataTables is licensed under the <a href="http://www.datatables.net/mit">MIT license</a>.</p>
 				</div>
 			</div>
 		</div>
 	</section>
 </body>
+
 </html>
